--- a/news/templates/all-news/base.html
+++ b/news/templates/all-news/base.html
@@ -13,6 +13,7 @@
 
   {% block styles %}
     {% bootstrap_css%}
+    <link rel="stylesheet" href="{ static 'css/basenews.css'}">
   {% endblock%}
 
 </head>
