--- a/news/templates/all-news/base.html
+++ b/news/templates/all-news/base.html
@@ -1,5 +1,5 @@
 {% load bootstrap4 %}
-{% load static%}
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,7 +13,7 @@
 
   {% block styles %}
     {% bootstrap_css%}
-    <link rel="stylesheet" href="{ static 'css/basenews.css'}">
+    <link rel="stylesheet" href="{% static 'css/basenews.css' %}">
   {% endblock%}
 
 </head>
