--- a/news/templates/navbar.html
+++ b/news/templates/navbar.html
@@ -26,19 +26,17 @@
     </ul>
 
     <!-- Adding a search form  -->
-    <div class="col-sm-4 col-md-4 navbar-right">
+    
 
-      <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+      <form class="form-inline my-2 my-lg-0" role="search" action="{% url 'search_results' %}">
 
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search Article" name="article">
-          <div class="input-group-btn">
-            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-          </div>
+          <input type="text" class="form-control mr-sm-2" placeholder="Search Article" name="article">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </div>
 
       </form>
-    </div>
+  
     <!-- search form end -->
     
   </div>
