--- a/news/templates/all-news/today-news.html
+++ b/news/templates/all-news/today-news.html
@@ -1,4 +1,5 @@
 {%extends 'all-news/base.html'%}
+{% load bootstrap4%}
 {% block content %} 
 {{ block.super}}
 
@@ -27,7 +28,7 @@
   {% endfor %}
 
   <div class="container-fluid">
-    <form action="{% url 'newToday' %}" method="POST">
+    <form action="{% url 'newsToday' %}" method="POST">
       {% csrf_token %}
       {% bootstrap_form letterForm layout='inline' %}
       <input type="submit" value='Subcribe' id="">
