--- a/news/templates/navbar.html
+++ b/news/templates/navbar.html
@@ -44,6 +44,9 @@
                     <a href="{%url 'newsToday'%}">Home</a>
                   </li>
                   <li>
+                    <a href="{%url 'new-article'%}">Create Article</a>
+                  </li>
+                  <li>
                     <a href="/accounts/password/change">Change Password</a>
                   </li>
                   <li>
