--- a/news/templates/all-news/article.html
+++ b/news/templates/all-news/article.html
@@ -13,9 +13,11 @@
    </div>
 
    <div class="row">
-     <p>{{article.post}}</p>
-   </div>
-
+    {% autoescape on %}
+    {{article.post| safe}}
+   {% endautoescape %}
+  </div>
+  
    <div class="row">
      <p>Posted {{article.pub_date|timesince}} by {{article.editor.first_name}}</p>
    </div>
